PUT UPDATE INVOICES IN CONTROLLERS
